# marketplace-streaming

./: .dockerignore  .gitignore  .sqlfluff  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.low-mem.yml  docker-compose.yml  pyproject.toml  risingwave.toml
.github/workflows/: ci.yml
clickhouse/: init.sql
clickhouse/users.d/: access.xml
dagster/: Dockerfile
dagster_service/: Dockerfile  workspace.yaml
docs/: brief.md
docs/adr/: 0001-streaming-engine.md  0002-architecture.md  0003-generator-design.md  0004-ci-strategy.md  0005-reconciliation.md  0006-demo-and-results.md
generator/: __init__.py  clock.py  fault_injection.py  generator.py  main.py  sink.py
reconciliation/: __init__.py  assets.py  io.py  logic.py  resources.py
scripts/: demo.py  fault_control.py  measure_results.py  switch_watermark.py
shared/: fault_injection.json
sql/: 01_sources.sql  01_sources_fault_mode.sql  02_mvs.sql
tests/: test_generator.py  test_phase4.py  test_reconciliation_logic.py  test_smoke.py
tests/integration/: conftest.py  test_broker.py  test_clickhouse_sink.py  test_reconciliation.py  test_streaming_sql.py  test_watermark_kill.py
