[project]
name = "marketplace-streaming"
version = "0.1.0"
description = "Real-time marketplace analytics: Redpanda → RisingWave streaming SQL → ClickHouse, with Dagster batch reconciliation and fault injection demo"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "faker>=25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "sqlfluff>=3.0",
]
integration = [
    # testcontainers[kafka] provides RedpandaContainer; [clickhouse] provides ClickHouseContainer
    "testcontainers[kafka,clickhouse]>=4.8",
    "psycopg2-binary>=2.9",
    "clickhouse-driver>=0.2.7",
    "confluent-kafka>=2.3,<3",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF"]
ignore = [
    # ARG001: Unused function argument — acceptable in abstract base class stubs
    "ARG001",
    # ARG002: Unused method argument — pytest fixtures appear in method signatures
    # even when not referenced directly (fixture injection pattern)
    "ARG002",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker; excluded from fast CI lane)",
]
