[project]
name = "marketplace-streaming"
version = "0.1.0"
description = "Real-time marketplace analytics: Redpanda → RisingWave streaming SQL → ClickHouse, with Dagster batch reconciliation and fault injection demo"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "faker>=25.0",
    # pandas powers the batch-recompute path in reconciliation.logic. It is a
    # core dependency (not integration-only) so the fast CI lane can unit-test
    # the recompute math with NO containers.
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*", "reconciliation*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "sqlfluff>=3.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]
integration = [
    # testcontainers[kafka] provides RedpandaContainer; [clickhouse] provides ClickHouseContainer
    "testcontainers[kafka,clickhouse]>=4.8",
    "psycopg2-binary>=2.9",
    "clickhouse-driver>=0.2.7",
    "confluent-kafka>=2.3,<3",
    # dagster is integration-only: the asset-check kill-verify materializes the
    # reconciliation assets in-process against the live compose substrate. The
    # fast lane never imports dagster (it tests reconciliation.logic directly).
    "dagster>=1.9,<2",
    # dagster-webserver is required by the `dagster dev` CLI the dagster_service
    # Dockerfile runs (it serves the UI on :3000). Without it, `dagster dev`
    # exits 2 with "The dagster-webserver Python package must be installed".
    # Pinned to the same major as dagster so the two stay in lockstep.
    "dagster-webserver>=1.9,<2",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF", "C4", "FURB", "RET", "TC", "FA"]
ignore = [
    # ARG001: Unused function argument — acceptable in abstract base class stubs
    "ARG001",
    # ARG002: Unused method argument — pytest fixtures appear in method signatures
    # even when not referenced directly (fixture injection pattern)
    "ARG002",
]

[tool.ruff.lint.isort]
known-first-party = ["generator", "reconciliation", "tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker; excluded from fast CI lane)",
]
# NOTE: the integration suite MUST run sequentially. Each test module brings up
# the docker-compose topology under its own COMPOSE_PROJECT_NAME but publishes
# the SAME fixed host ports (4566 / 19092 / 9000). Module-scoped fixtures tear
# each topology down before the next starts, so the ports never clash UNDER
# SEQUENTIAL EXECUTION. Do NOT add pytest-xdist (`-n auto`) or any parallel
# runner for `tests/integration/` — concurrent modules would collide on those
# fixed ports. See docs/adr/0004-ci-strategy.md § "Module isolation and fixed ports".
